css/styles.css
html {
	background-color: rgb(175, 204, 255);
}

.container {
	background: #062641;
	max-width: 1110px;
	box-shadow: 0px 0px 5px 3px #00031d;
	-webkit-box-shadow: 0px 0px 5px 3px #00031d;
	-moz-box-shadow: 0px 0px 5px 3px #00031d;
}

#top-head {
	padding-top: 0;
	padding-left: 0;
	padding-right: 10px;
}

#main-title {
	font-family: 'Playfair Display', serif;
	font-size: 3.5rem;
	color: #ccdeff;
	font-weight: bold;
	padding-top: 10px;
}

#main-title a {
	text-decoration: none;
	color: #ccdeff;
}

.aat-bannerr, .aat-bannerl {
	width: 100px;
}

.aat-bannerl {
	float: left;
}

.aat-bannerr {
	float: right;
	display: none;
}

#sub-title {
	font-family: 'Slabo 27px', serif;
	color: #ccdeff;
	text-align: center;
}

#top-pics {
	max-width: 270px;
	margin: 0 auto;
}

.pic-section {
	max-width: 131.25px;
}

.pic-image {
	max-width: 200px;
}

.pic-text {
	color: white;
	max-width: 200px;
	text-align: center;
}

#nav {
	max-width: 520px;
	margin: 0 auto;
}

#nav a {
	width: 97%;
	min-width: 85px;
	padding: 0;
	margin: 5px;
}

#subnav {
	padding-left: 10px;
}

hr {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

#area {
	color: white;
	padding: 0 20px;
	max-width: 1000px;
	margin: 0 auto;
}

#foot {
	display: block;	
	background: #062641;
	width: 100%;
	height: 100%;
	font-size: 0.8em;
	position: absolute;
	padding: 20px 0 10px 0;
	margin: 0 auto;
	max-height: 278px;
	box-shadow: 0px 0px 3px 2px #00031d;
	-moz-box-shadow: 0px 0px 3px 2px #00031d;
	-webkit-box-shadow: 0px 0px 3px 2px #00031d;
}

@media (min-width: 333px) {
	#foot {
		max-height: 270px;
	}
}

@media (min-width: 605px) {
	#foot {
		max-height: 160px;
	}
}

@media (min-width: 550px) {
	.aat-bannerr {
		display: initial;
	}
	#top-head {
		padding-top: 0;
		padding-left: 10px;
	}
	#nav a {
		width: 90%;
	}
	#top-pics {
		max-width: 600px;
	}
	.pic-section {
		max-width: 200px;
	}
}

.linkList {
	display: inline-block;
	margin-right: 10px;
}

.linklist li a {
	color: #00C2FF;
}

li {
	color: white;
}

#links {
	max-width: 610px;
	margin: 0 auto;
	height: 90px;
}

#footHead {
	color: #ccdeff;
	width: 140px;
	text-align: center;
	margin: 0 auto;
}

